Repaired link and href pathing

--- a/About.html
+++ b/About.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT</title>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="../Resources/css/stylesheet.css" type="text/css">
-    <script src="../Resources/javascript/navmenu.js" defer></script>
+    <link rel="stylesheet" href="./css/stylesheet.css" type="text/css">
+    <script src="./javascript/navmenu.js" defer></script>
 </head>
 <body class="bgroundcolor">
      <!-- Nav Bar ------------------------------------------------------------------>
@@ -17,12 +17,12 @@
                 <a href="../Resources/index.html"><h1>FULL-STACK WEB DEVELOPMENT</h1></a>
             </div>
             <div class="nav_header_links font_krona_one navDisplay">
-                <p class="gr">ABOUT</p>
-                <a href="../Resources/Projects.html"><p>PROJECTS</p></a>
-                <a href="../Resources/Contact.html"><p>CONTACT</p></a>
+                <p class="greyout">ABOUT</p>
+                <a href="./Projects.html"><p>PROJECTS</p></a>
+                <a href="./Contact.html"><p>CONTACT</p></a>
             </div>
             <!-- Mobile Nav Contents -->
-            <a href="../Resources/index.html" class="home_icon_display">
+            <a href="./index.html" class="home_icon_display">
                 <div class="material-icons-round home_button_style">
                     home
                 </div>
@@ -36,9 +36,9 @@
         <div class="dropDownMenu" id="burgerDropDownMenu">
             <p class="greyout">ABOUT</p>
             <hr>
-            <a href="../Resources/Projects.html"><p>PROJECTS</p></a>
+            <a href="./Projects.html"><p>PROJECTS</p></a>
             <hr>
-            <a href="../Resources/Contact.html"><p>CONTACT</p></a>
+            <a href="./Contact.html"><p>CONTACT</p></a>
         </div>
     </div>
 <!-- Div for the <main> & <footer> Section ------------------------------------>
