--- a/Contact.html
+++ b/Contact.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT</title>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="../Resources/css/stylesheet.css" type="text/css">
-    <script src="../Resources/javascript/navmenu.js" defer></script>
+    <link rel="stylesheet" href="./css/stylesheet.css" type="text/css">
+    <script src="./javascript/navmenu.js" defer></script>
 </head>
 <body class="bgroundcolor">
      <!-- Nav Bar ------------------------------------------------------------------>
      <div class="nav-menu_sticky">
         <nav class="auxPage_icon_spacing">
             <div class="nav_title font_jomhuria desktop_title">
-                <a href="../Resources/index.html"><h1>FULL-STACK WEB DEVELOPMENT</h1></a>
+                <a href="./index.html"><h1>FULL-STACK WEB DEVELOPMENT</h1></a>
             </div>
             <div class="nav_header_links font_krona_one navDisplay">
-                <a href="../Resources/About.html"><p>ABOUT</p></a>
-                <a href="../Resources/Projects.html"><p>PROJECTS</p></a>
-                <p>CONTACT</p>
+                <a href="./About.html"><p>ABOUT</p></a>
+                <a href="./Projects.html"><p>PROJECTS</p></a>
+                <p class="greyout">CONTACT</p>
             </div>
             <!-- Mobile Nav Contents -->
-            <a href="../Resources/index.html" class="home_icon_display">
+            <a href="./index.html" class="home_icon_display">
                 <div class="material-icons-round home_button_style">
                     home
                 </div>
@@ -34,9 +34,9 @@
         </nav>
         <!-- Drop Down Menu -->
         <div class="dropDownMenu" id="burgerDropDownMenu">
-            <a href="../Resources/About.html"><p>ABOUT</p></a>
+            <a href="./About.html"><p>ABOUT</p></a>
             <hr>
-            <a href="../Resources/Projects.html"><p>PROJECTS</p></a>
+            <a href="./Projects.html"><p>PROJECTS</p></a>
             <hr>
             <p class="greyout">CONTACT</p>
         </div>
