--- a/Projects.html
+++ b/Projects.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJECTS</title>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="../Resources/css/stylesheet.css" type="text/css">
-    <script src="../Resources/javascript/navmenu.js" defer></script>
+    <link rel="stylesheet" href="./css/stylesheet.css" type="text/css">
+    <script src="./javascript/navmenu.js" defer></script>
 </head>
 <body class="projects_bgroundcolor">
      <!-- Nav Bar ------------------------------------------------------------------>
      <div class="nav-menu_sticky">
         <nav class="auxPage_icon_spacing">
             <div class="nav_title font_jomhuria desktop_title">
-                <a href="../Resources/index.html"><h1>FULL-STACK WEB DEVELOPMENT</h1></a>
+                <a href="./index.html"><h1>FULL-STACK WEB DEVELOPMENT</h1></a>
             </div>
             <div class="nav_header_links font_krona_one navDisplay">
-                <a href="../Resources/About.html"><p>ABOUT</p></a>
-                <p>PROJECTS</p>
-                <a href="../Resources/Contact.html"><p>CONTACT</p></a>
+                <a href="./About.html"><p>ABOUT</p></a>
+                <p class="greyout">PROJECTS</p>
+                <a href="./Contact.html"><p>CONTACT</p></a>
             </div>
             <!-- Mobile Nav Contents -->
-            <a href="../Resources/index.html" class="home_icon_display">
+            <a href="./index.html" class="home_icon_display">
                 <div class="material-icons-round home_button_style">
                     home
                 </div>
@@ -34,11 +34,11 @@
         </nav>
         <!-- Drop Down Menu -->
         <div class="dropDownMenu" id="burgerDropDownMenu">
-            <a href="../Resources/About.html"><p>ABOUT</p></a>
+            <a href="./About.html"><p>ABOUT</p></a>
             <hr>
             <p class="greyout">PROJECTS</p>
             <hr>
-            <a href="../Resources/Contact.html"><p>CONTACT</p></a>
+            <a href="./Contact.html"><p>CONTACT</p></a>
         </div>
     </div>
 <!-- Div for the <main> & <footer> Section ------------------------------------>
@@ -60,24 +60,24 @@
         </div>
 
         <div class="projDisplayFlexbox fullsized">
-            <img src="../Resources/images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
-            <img src="../Resources/images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
-            <img src="../Resources/images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
-            <img src="../Resources/images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
+            <img src="./images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
+            <img src="./images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
+            <img src="./images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
+            <img src="./images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
         </div>
 
         <!-- <div class="projDisplayFlexbox reduced">
             <div>
-                <img src="../Resources/images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
+                <img src="./images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
             </div>
             <div>
-                <img src="../Resources/images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
+                <img src="./images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
             </div>
             <div>
-                <img src="../Resources/images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
+                <img src="./images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
             </div>
             <div>
-                <img src="../Resources/images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
+                <img src="./images/vector-website-wireframe.jpg" alt="Cartoom picture of a website">
             </div>
         </div> -->
 
