--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PORTFOLIO</title>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="./css/stylesheet.css" type="text/css">
-    <script src="../Resources/javascript/script.js" defer></script>
+    <script src="./javascript/script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
 <!-- <link href="https://fonts.googleapis.com/css2?family=Jomhuria&family=Krona+One&family=Roboto+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet"> -->
@@ -22,9 +22,9 @@
                 <h1>FULL-STACK WEB DEVELOPMENT</h1>
             </div>
             <div class="nav_header_links font_krona_one navDisplay">
-                <a href="../Resources/About.html"><p>ABOUT</p></a>
-                <a href="../Resources/Projects.html"><p>PROJECTS</p></a>
-                <a href="../Resources/Contact.html"><p>CONTACT</p></a>
+                <a href="./About.html"><p>ABOUT</p></a>
+                <a href="./Projects.html"><p>PROJECTS</p></a>
+                <a href="./Contact.html"><p>CONTACT</p></a>
             </div>
             <!-- Mobile Nav Contents -->
             <div class="material-icons hamburger_menu"  id="burgerMenuIcon">
@@ -33,11 +33,11 @@
         </nav>
         <!-- Drop Down Menu -->
         <div class="dropDownMenu" id="burgerDropDownMenu">
-            <a href="../Resources/About.html"><p>ABOUT</p></a>
+            <a href="./About.html"><p>ABOUT</p></a>
             <hr>
-            <a href="../Resources/Projects.html"><p>PROJECTS</p></a>
+            <a href="./Projects.html"><p>PROJECTS</p></a>
             <hr>
-            <a href="../Resources/Contact.html"><p>CONTACT</p></a>
+            <a href="./Contact.html"><p>CONTACT</p></a>
         </div>
     </div>
 
@@ -102,34 +102,34 @@
 
         </div>
         <!-- Link Boxes --------------------->
-        <a href="../Resources/About.html" class="linkBox1_position linkBox1">
+        <a href="./About.html" class="linkBox1_position linkBox1">
             <div class=" font_Roboto_mono">
                 <p id="aboutLink">Lets go</p>
             </div>
         </a>
 
-        <a href="../Resources/Projects.html" class="linkBox2_position linkBox2">
+        <a href="./Projects.html" class="linkBox2_position linkBox2">
             <div class=" font_Roboto_mono">
                 <p id="projectsLink">Lets go</p>
             </div>
         </a>
 
-        <a href="../Resources/Contact.html" class="linkBox3_position linkBox3">
+        <a href="./Contact.html" class="linkBox3_position linkBox3">
             <div class=" font_Roboto_mono">
                 <p id="contactLink">Lets go</p>
             </div>
         </a>
         <!-- Link Box Images ----------------->
         <div class="aboutImage1_position">
-            <img src="../Resources/images/software-engineers-vector.png" alt="" class="imgFit">
+            <img src="./images/software-engineers-vector.png" alt="" class="imgFit">
         </div>
 
         <div class="aboutImage2_position">
-            <img src="../Resources/images/Project_67-05.jpg" alt="" class="imgFit">
+            <img src="./images/Project_67-05.jpg" alt="" class="imgFit">
         </div>
 
         <div class="aboutImage3_position">
-            <img src="../Resources/images/contact us.jpg" alt="" class="imgFit">
+            <img src="./images/contact us.jpg" alt="" class="imgFit">
         </div>
 
         <!-- Link Box Titles --------------------->
