Fixed broken home link from about page on Desktop version

--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
      <div class="nav-menu_sticky">
         <nav >
             <div class="nav_title font_jomhuria desktop_title">
-                <a href="../Resources/index.html"><h1>FULL-STACK WEB DEVELOPMENT</h1></a>
+                <a href="./index.html"><h1>FULL-STACK WEB DEVELOPMENT</h1></a>
             </div>
             <div class="nav_header_links font_krona_one navDisplay">
                 <p class="greyout">ABOUT</p>
